--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="clock">
-        <div id="time"></div>
-    </div>
-    <div class="profile">
-        <h2>Ashok Pal</h2>
-        <p>3rd-year B.Tech student at B.I.E.T.</p>
-        <p>Skilled in C, Java, Python, and Web Development.</p>
-        <p>Actively learning Cybersecurity through hands-on projects and Coursera courses.</p>
-        <p>Always exploring new technologies.</p>
-        <p>Connect with me on <a href="https://www.linkedin.com/in/yoursashok" target="_blank">LinkedIn</a></p>
-        <p>GitHub: <a href="https://github.com/Ashokkpal" target="_blank">Ashokkpal</a></p>
+    <div class="container">
+        <div class="clock">
+            <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+        </div>
+        <div class="profile">
+            <h2>Ashok Pal</h2>
+            <p>3rd-year B.Tech student at B.I.E.T.</p>
+            <p>Specializing in Software Engineering & Cybersecurity.</p>
+            <p>Skilled in C, Java, Python, Web Development & SQL.</p>
+            <p>Explore my projects: <a href="https://github.com/Ashokkpal/youtube-downloader" target="_blank">GitHub Repository</a></p>
+            <p>Connect with me on <a href="https://www.linkedin.com/in/yoursashok" target="_blank">LinkedIn</a></p>
+            <p>GitHub: <a href="https://github.com/Ashokkpal" target="_blank">Ashokkpal</a></p>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
