--- a/index.html
+++ b/index.html
@@ -8,8 +8,23 @@
 </head>
 <body>
     <div class="container">
+        <img src="https://github.com/Ashokkpal/ashokkpal.github.io/blob/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-img">
         <div class="clock">
-            <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
+            <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
+            <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="ampm"></span>
+        </div>
+        <div class="world-clock">
+            <h3>World Clock</h3>
+            <p>Kolkata: <span id="kolkata-time"></span></p>
+            <p>London: <span id="london-time"></span></p>
+            <p>New York: <span id="newyork-time"></span></p>
+            <p>Tokyo: <span id="tokyo-time"></span></p>
+        </div>
+        <div class="alarm">
+            <h3>Set Alarm</h3>
+            <input type="time" id="alarm-time">
+            <button onclick="setAlarm()">Set Alarm</button>
+            <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
         </div>
         <div class="profile">
             <h2>Ashok Pal</h2>
