--- a/index.html
+++ b/index.html
@@ -7,31 +7,21 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Digital Clock</a></li>
+            <li><a href="world-clock.html">World Clock</a></li>
+            <li><a href="alarm.html">Alarm</a></li>
+        </ul>
+    </nav>
+
     <div class="container">
-        <!-- Digital Clock Section -->
         <section class="main-clock">
             <img src="https://github.com/Ashokkpal/ashokkpal.github.io/blob/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-img">
             <div class="clock">
                 <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
                 <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="ampm"></span>
             </div>
-        </section>
-
-        <!-- World Clock Section -->
-        <section class="world-clock">
-            <h2>World Clock</h2>
-            <p>Kolkata: <span id="kolkata-time"></span></p>
-            <p>London: <span id="london-time"></span></p>
-            <p>New York: <span id="newyork-time"></span></p>
-            <p>Tokyo: <span id="tokyo-time"></span></p>
-        </section>
-
-        <!-- Alarm Section -->
-        <section class="alarm">
-            <h2>Set Alarm</h2>
-            <input type="time" id="alarm-time">
-            <button onclick="setAlarm()">Set Alarm</button>
-            <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
         </section>
     </div>
 
