--- a/world-clock.html
+++ b/world-clock.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>World Clock</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Digital Clock</a></li>
+            <li><a href="world-clock.html">World Clock</a></li>
+            <li><a href="alarm.html">Alarm</a></li>
+        </ul>
+    </nav>
+
+    <div class="container">
+        <h2>World Clock</h2>
+        <div class="world-clock">
+            <p>Kolkata: <span id="kolkata-time"></span> | <span id="kolkata-time-12"></span></p>
+            <p>London: <span id="london-time"></span> | <span id="london-time-12"></span></p>
+            <p>New York: <span id="newyork-time"></span> | <span id="newyork-time-12"></span></p>
+            <p>Tokyo: <span id="tokyo-time"></span> | <span id="tokyo-time-12"></span></p>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
