--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Clock</title>
+    <title>Digital Clock | Ashok Pal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="dark-mode">
+
     <nav>
         <ul>
             <li><a href="index.html">Digital Clock</a></li>
             <li><a href="world-clock.html">World Clock</a></li>
             <li><a href="alarm.html">Alarm</a></li>
         </ul>
+        <button onclick="toggleTheme()">🌞/🌙</button>
     </nav>
 
     <div class="container">
-        <section class="main-clock">
-            <img src="https://github.com/Ashokkpal/ashokkpal.github.io/blob/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-img">
-            <div class="clock">
-                <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
-                <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="ampm"></span>
-            </div>
-        </section>
+        <h1>Welcome to My Clock Project</h1>
+        <img src="https://github.com/Ashokkpal/ashokkpal.github.io/blob/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-img">
+        <h2>Created by Ashok Pal</h2>
+        <p>B.Tech | Software Engineering | Cybersecurity Enthusiast</p>
     </div>
 
     <script src="script.js"></script>
