--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     </nav>
 
     <div class="container">
-        <h1>Welcome to My Clock Project</h1>
+        <h1>Digital Clock</h1>
         <img src="https://github.com/Ashokkpal/ashokkpal.github.io/blob/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-img">
-        <h2>Created by Ashok Pal</h2>
-        <p>B.Tech | Software Engineering | Cybersecurity Enthusiast</p>
+        <h2 id="clock"></h2>
     </div>
 
     <script src="script.js"></script>
