--- a/world-clock.html
+++ b/world-clock.html
@@ -3,29 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Clock</title>
+    <title>World Clock | Ashok Pal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="dark-mode">
+
     <nav>
         <ul>
             <li><a href="index.html">Digital Clock</a></li>
             <li><a href="world-clock.html">World Clock</a></li>
             <li><a href="alarm.html">Alarm</a></li>
         </ul>
+        <button onclick="toggleTheme()">🌞/🌙</button>
     </nav>
 
     <div class="container">
-        <h2>World Clock</h2>
-        <div class="world-clock">
-            <p>Kolkata: <span id="kolkata-time"></span> | <span id="kolkata-time-12"></span></p>
-            <p>London: <span id="london-time"></span> | <span id="london-time-12"></span></p>
-            <p>New York: <span id="newyork-time"></span> | <span id="newyork-time-12"></span></p>
-            <p>Tokyo: <span id="tokyo-time"></span> | <span id="tokyo-time-12"></span></p>
-        </div>
+        <h1>World Clock</h1>
+        <p>Kolkata: <span id="kolkata-time"></span></p>
+        <p>London: <span id="london-time"></span></p>
+        <p>New York: <span id="newyork-time"></span></p>
+        <p>Tokyo: <span id="tokyo-time"></span></p>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
-
