--- a/alarm.html
+++ b/alarm.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alarm</title>
+    <title>Alarm | Ashok Pal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="dark-mode">
+
     <nav>
         <ul>
             <li><a href="index.html">Digital Clock</a></li>
             <li><a href="world-clock.html">World Clock</a></li>
             <li><a href="alarm.html">Alarm</a></li>
         </ul>
+        <button onclick="toggleTheme()">🌞/🌙</button>
     </nav>
 
     <div class="container">
-        <h2>Set Alarm</h2>
+        <h1>Set Alarm</h1>
         <input type="time" id="alarm-time">
         <button onclick="setAlarm()">Set Alarm</button>
-        <button onclick="stopAlarm()">Stop</button>
         <button onclick="pauseAlarm()">Pause</button>
-        <button onclick="resetAlarm()">Reset</button>
+        <button onclick="stopAlarm()">Stop</button>
         <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
     </div>
 
