--- a/index.html
+++ b/index.html
@@ -6,22 +6,29 @@
     <title>Digital Clock | Ashok Pal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="dark-mode">
+<body>
+    <header>
+        <h1>🕒 Digital Clock System</h1>
+        <button id="theme-toggle">🌙 Switch Theme</button>
+    </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Digital Clock</a></li>
-            <li><a href="world-clock.html">World Clock</a></li>
-            <li><a href="alarm.html">Alarm</a></li>
-        </ul>
-        <button onclick="toggleTheme()">🌞/🌙</button>
+        <a href="index.html" class="active">Digital Clock</a>
+        <a href="world-clock.html">World Clock</a>
+        <a href="alarm.html">Alarm</a>
     </nav>
 
-    <div class="container">
-        <h1>Digital Clock</h1>
-        <img src="https://github.com/Ashokkpal/ashokkpal.github.io/blob/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-img">
-        <h2 id="clock"></h2>
-    </div>
+    <main class="clock-section">
+        <div class="profile-container">
+            <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
+            <h2>Ashok Pal</h2>
+        </div>
+
+        <div class="clock">
+            <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
+            <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="ampm"></span>
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
