--- a/alarm.html
+++ b/alarm.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alarm | Ashok Pal</title>
+    <title>Alarm</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body class="dark-mode">
+<body>
+    <header>
+        <h1>⏰ Set Alarm</h1>
+        <button id="theme-toggle">🌙 Switch Theme</button>
+    </header>
 
     <nav>
-        <ul>
-            <li><a href="index.html">Digital Clock</a></li>
-            <li><a href="world-clock.html">World Clock</a></li>
-            <li><a href="alarm.html">Alarm</a></li>
-        </ul>
-        <button onclick="toggleTheme()">🌞/🌙</button>
+        <a href="index.html">Digital Clock</a>
+        <a href="world-clock.html">World Clock</a>
+        <a href="alarm.html" class="active">Alarm</a>
     </nav>
 
-    <div class="container">
-        <h1>Set Alarm</h1>
+    <main class="alarm-section">
         <input type="time" id="alarm-time">
         <button onclick="setAlarm()">Set Alarm</button>
         <button onclick="pauseAlarm()">Pause</button>
         <button onclick="stopAlarm()">Stop</button>
         <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
-    </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
