--- a/index.html
+++ b/index.html
@@ -12,23 +12,21 @@
         <button id="theme-toggle">🌙 Switch Theme</button>
     </header>
 
-    <nav>
-        <a href="index.html" class="active">Digital Clock</a>
-        <a href="world-clock.html">World Clock</a>
-        <a href="alarm.html">Alarm</a>
-    </nav>
+    <div class="profile-container">
+        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
+        <h2>Ashok Pal</h2>
+    </div>
 
-    <main class="clock-section">
-        <div class="profile-container">
-            <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
-            <h2>Ashok Pal</h2>
-        </div>
+    <div class="menu-container">
+        <a href="index.html" class="round-button">🕒</a>
+        <a href="world-clock.html" class="round-button">🌎</a>
+        <a href="alarm.html" class="round-button">⏰</a>
+    </div>
 
-        <div class="clock">
-            <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
-            <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="ampm"></span>
-        </div>
-    </main>
+    <div class="clock">
+        <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
+        <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span> <span id="ampm"></span>
+    </div>
 
     <script src="script.js"></script>
 </body>
