--- a/world-clock.html
+++ b/world-clock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Clock</title>
+    <title>World Clock | Ashok Pal</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,20 +12,24 @@
         <button id="theme-toggle">🌙 Switch Theme</button>
     </header>
 
-    <nav>
-        <a href="index.html">Digital Clock</a>
-        <a href="world-clock.html" class="active">World Clock</a>
-        <a href="alarm.html">Alarm</a>
-    </nav>
+    <div class="profile-container">
+        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
+        <h2>Ashok Pal</h2>
+    </div>
 
-    <main class="world-clock-section">
-        <div class="clock-container">
-            <h3>Kolkata: <span id="kolkata-time"></span></h3>
-            <h3>London: <span id="london-time"></span></h3>
-            <h3>New York: <span id="newyork-time"></span></h3>
-            <h3>Tokyo: <span id="tokyo-time"></span></h3>
-        </div>
-    </main>
+    <div class="menu-container">
+        <a href="index.html" class="round-button">🕒</a>
+        <a href="world-clock.html" class="round-button">🌎</a>
+        <a href="alarm.html" class="round-button">⏰</a>
+    </div>
+
+    <div class="clock">
+        <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
+        <h3>Kolkata: <span id="kolkata-time"></span></h3>
+        <h3>London: <span id="london-time"></span></h3>
+        <h3>New York: <span id="newyork-time"></span></h3>
+        <h3>Tokyo: <span id="tokyo-time"></span></h3>
+    </div>
 
     <script src="script.js"></script>
 </body>
