--- a/world-clock.html
+++ b/world-clock.html
@@ -3,33 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Clock | Ashok Pal</title>
+    <title>World Clock</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>🌎 World Clock</h1>
-        <button id="theme-toggle">🌙 Switch Theme</button>
+        <button id="theme-toggle" class="mechanical-button">🌙 Switch Theme</button>
     </header>
 
-    <div class="profile-container">
-        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
-        <h2>Ashok Pal</h2>
-    </div>
+    <nav>
+        <a href="index.html">Digital Clock</a>
+        <a href="world-clock.html" class="active">World Clock</a>
+        <a href="alarm.html">Alarm</a>
+    </nav>
 
-    <div class="menu-container">
-        <a href="index.html" class="round-button">🕒</a>
-        <a href="world-clock.html" class="round-button">🌎</a>
-        <a href="alarm.html" class="round-button">⏰</a>
-    </div>
-
-    <div class="clock">
-        <div id="format-toggle">Format: <button onclick="toggleFormat()">24-hour</button></div>
-        <h3>Kolkata: <span id="kolkata-time"></span></h3>
-        <h3>London: <span id="london-time"></span></h3>
-        <h3>New York: <span id="newyork-time"></span></h3>
-        <h3>Tokyo: <span id="tokyo-time"></span></h3>
-    </div>
+    <main class="world-clock-section">
+        <div class="clock-container">
+            <h3>Kolkata: <span id="kolkata-time"></span></h3>
+            <h3>London: <span id="london-time"></span></h3>
+            <h3>New York: <span id="newyork-time"></span></h3>
+            <h3>Tokyo: <span id="tokyo-time"></span></h3>
+        </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
