--- a/alarm.html
+++ b/alarm.html
@@ -3,33 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alarm | Ashok Pal</title>
+    <title>Alarm</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>⏰ Set Alarm</h1>
-        <button id="theme-toggle">🌙 Switch Theme</button>
+        <button id="theme-toggle" class="mechanical-button">🌙 Switch Theme</button>
     </header>
 
-    <div class="profile-container">
-        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
-        <h2>Ashok Pal</h2>
-    </div>
+    <nav>
+        <a href="index.html">Digital Clock</a>
+        <a href="world-clock.html">World Clock</a>
+        <a href="alarm.html" class="active">Alarm</a>
+    </nav>
 
-    <div class="menu-container">
-        <a href="index.html" class="round-button">🕒</a>
-        <a href="world-clock.html" class="round-button">🌎</a>
-        <a href="alarm.html" class="round-button">⏰</a>
-    </div>
-
-    <div class="clock">
+    <main class="alarm-section">
         <input type="time" id="alarm-time">
-        <button onclick="setAlarm()">Set Alarm</button>
-        <button onclick="pauseAlarm()">Pause</button>
-        <button onclick="stopAlarm()">Stop</button>
+        <button onclick="setAlarm()" class="mechanical-button">Set Alarm</button>
+        <button onclick="pauseAlarm()" class="mechanical-button">Pause</button>
+        <button onclick="stopAlarm()" class="mechanical-button">Stop</button>
         <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
-    </div>
+    </main>
 
     <script src="script.js"></script>
 </body>
