--- a/set_alarm.html
+++ b/set_alarm.html
@@ -3,21 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alarm</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="author" content="Ashok Pal">
+    <title>Set Alarm | Ashok Pal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>⏰ Set Alarm</h1>
-        <button id="theme-toggle" class="mechanical-button">🌙 Switch Theme</button>
-    </header>
-
-    <nav>
-        <a href="index.html">Digital Clock</a>
-        <a href="world-clock.html">World Clock</a>
-        <a href="alarm.html" class="active">Alarm</a>
-    </nav>
-
+    <h1>⏰ Set Alarm</h1>
     <main class="alarm-section">
         <input type="time" id="alarm-time">
         <button onclick="setAlarm()" class="mechanical-button">Set Alarm</button>
@@ -25,6 +16,12 @@
         <button onclick="stopAlarm()" class="mechanical-button">Stop</button>
         <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
     </main>
+    <a href="index.html" class="mechanical-button">🔙 Back</a>
+
+    <footer>
+        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
+        <p>Developed by <b>Ashok Pal</b> | <a href="https://github.com/Ashokkpal" target="_blank">GitHub</a></p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
