--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ashok Pal">
-    <meta name="description" content="Digital Clock System with 12/24-hour toggle, world clock, and alarm system by Ashok Pal">
+    <meta name="description" content="Digital Clock System with world clock and alarm by Ashok Pal">
     <title>Digital Clock System | Ashok Pal</title>
     <link rel="stylesheet" href="style.css">
 </head>
