--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <h1>🕒 Digital Clock System</h1>
     <div class="clock" id="digital-clock"></div>
-    <button class="mechanical-button" onclick="toggleFormat()">Switch 12/24 Hour</button>
+    <button class="button yellow" onclick="toggleFormat()">Switch 12/24 Hour</button>
     <br><br>
-    <a href="world_clock.html" class="mechanical-button">🌎 World Clock</a>
-    <a href="set_alarm.html" class="mechanical-button">⏰ Set Alarm</a>
+    <a href="world_clock.html" class="button red">🌎 World Clock</a>
+    <a href="set_alarm.html" class="button blue">⏰ Set Alarm</a>
 
     <footer>
         <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
