--- a/world_clock.html
+++ b/world_clock.html
@@ -9,24 +9,24 @@
 <body>
     <h1>🌎 World Clock</h1>
     <div class="world-clock-container">
-        <div class="clock-box">
+        <div class="clock-box yellow">
             <h2>🕰 Kolkata</h2>
             <p id="kolkata-time"></p>
         </div>
-        <div class="clock-box">
+        <div class="clock-box red">
             <h2>🇬🇧 London</h2>
             <p id="london-time"></p>
         </div>
-        <div class="clock-box">
+        <div class="clock-box blue">
             <h2>🇯🇵 Tokyo</h2>
             <p id="tokyo-time"></p>
         </div>
-        <div class="clock-box">
+        <div class="clock-box white">
             <h2>🇺🇸 New York</h2>
             <p id="newyork-time"></p>
         </div>
     </div>
-    <a href="index.html" class="mechanical-button">🔙 Back</a>
+    <a href="index.html" class="button red">🔙 Back</a>
 
     <footer>
         <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
