--- a/set_alarm.html
+++ b/set_alarm.html
@@ -10,12 +10,12 @@
     <h1>⏰ Set Alarm</h1>
     <main class="alarm-section">
         <input type="time" id="alarm-time">
-        <button onclick="setAlarm()" class="mechanical-button">Set Alarm</button>
-        <button onclick="pauseAlarm()" class="mechanical-button">Pause</button>
-        <button onclick="stopAlarm()" class="mechanical-button">Stop</button>
+        <button onclick="setAlarm()" class="button yellow">Set Alarm</button>
+        <button onclick="pauseAlarm()" class="button red">Pause</button>
+        <button onclick="stopAlarm()" class="button blue">Stop</button>
         <audio id="alarm-sound" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" preload="auto"></audio>
     </main>
-    <a href="index.html" class="mechanical-button">🔙 Back</a>
+    <a href="index.html" class="button red">🔙 Back</a>
 
     <footer>
         <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
