--- a/world_clock.html
+++ b/world_clock.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock | Ashok Pal</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -28,11 +27,6 @@
     </div>
     <a href="index.html" class="button red">🔙 Back</a>
 
-    <footer>
-        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
-        <p>Developed by <b>Ashok Pal</b> | <a href="https://github.com/Ashokkpal" target="_blank">GitHub</a></p>
-    </footer>
-
-    <script src="world_clock.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
