--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🕒 Digital Clock System</h1>
-    <div class="clock" id="digital-clock"></div>
-    <button class="button yellow" onclick="toggleFormat()">Switch 12/24 Hour</button>
-    <br><br>
-    <a href="world_clock.html" class="button red">🌎 World Clock</a>
-    <a href="set_alarm.html" class="button blue">⏰ Set Alarm</a>
-
-    <footer>
-        <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
-        <p>Developed by <b>Ashok Pal</b> | <a href="https://github.com/Ashokkpal" target="_blank">GitHub</a></p>
-    </footer>
-
+    <div class="container">
+        <h1>🕒 Digital Clock System</h1>
+        <div class="clock" id="digital-clock"></div>
+        <button class="button yellow" onclick="toggleFormat()">Switch 12/24 Hour</button>
+        <br><br>
+        <a href="world_clock.html" class="button red">🌎 World Clock</a>
+        <a href="set_alarm.html" class="button blue">⏰ Set Alarm</a>
+        <footer>
+            <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic">
+            <p>Developed by <b>Ashok Pal</b> | <a href="https://github.com/Ashokkpal" target="_blank">GitHub</a></p>
+        </footer>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
