--- a/world_clock.html
+++ b/world_clock.html
@@ -6,27 +6,32 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🌎 World Clock</h1>
-    <div class="world-clock-container">
-        <div class="clock-box yellow">
-            <h2>🕰 Kolkata</h2>
-            <p id="kolkata-time"></p>
+    <div class="container">
+        <h1>🌎 World Clock</h1>
+        <div class="world-clock-container">
+            <div class="clock-box yellow">
+                <h2>🕰 Kolkata</h2>
+                <p id="kolkata-time"></p>
+            </div>
+            <div class="clock-box red">
+                <h2>🇬🇧 London</h2>
+                <p id="london-time"></p>
+            </div>
+            <div class="clock-box blue">
+                <h2>🇯🇵 Tokyo</h2>
+                <p id="tokyo-time"></p>
+            </div>
+            <div class="clock-box white">
+                <h2>🇺🇸 New York</h2>
+                <p id="newyork-time"></p>
+            </div>
+            <div class="clock-box green">
+                <h2>🇦🇺 Sydney</h2>
+                <p id="sydney-time"></p>
+            </div>
         </div>
-        <div class="clock-box red">
-            <h2>🇬🇧 London</h2>
-            <p id="london-time"></p>
-        </div>
-        <div class="clock-box blue">
-            <h2>🇯🇵 Tokyo</h2>
-            <p id="tokyo-time"></p>
-        </div>
-        <div class="clock-box white">
-            <h2>🇺🇸 New York</h2>
-            <p id="newyork-time"></p>
-        </div>
+        <a href="index.html" class="button red">🔙 Back</a>
     </div>
-    <a href="index.html" class="button red">🔙 Back</a>
-
     <script src="script.js"></script>
 </body>
 </html>
