--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             padding: 20px;
             border-radius: 10px;
             box-shadow: 2px 2px 10px rgba(255, 215, 0, 0.5);
+            color: #FFD700;
         }
         select, button {
             padding: 10px;
@@ -34,14 +35,18 @@
             border-radius: 5px;
             border: none;
         }
-        .image-container {
-            margin-top: 20px;
+        .mechanical-button {
+            background: #555;
+            color: #FFD700;
+            border: 2px solid #FFD700;
+            padding: 10px 20px;
+            font-size: 18px;
+            cursor: pointer;
+            transition: 0.3s;
+            border-radius: 5px;
         }
-        .image-container img {
-            width: 300px;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(255, 215, 0, 0.5);
+        .mechanical-button:hover {
+            background: #777;
         }
     </style>
 </head>
@@ -50,12 +55,7 @@
     <img src="https://raw.githubusercontent.com/Ashokkpal/ashokkpal.github.io/main/images/ashokk.jpg" alt="Ashok Pal" class="profile-pic" width="150">
     <p>B.Tech | Software Engineering | Cybersecurity Enthusiast</p>
     
-    <div class="image-container">
-        <img id="clock-image" src="https://via.placeholder.com/300" alt="Clock Image">
-        <br>
-        <button onclick="changeImage()">Change Image</button>
-        <button onclick="toggleTheme()">Change Theme</button>
-    </div>
+    <button class="mechanical-button" onclick="toggleTheme()">Change Theme</button>
 
     <div class="clock-container">
         <div class="clock" id="digital-clock">
@@ -88,12 +88,6 @@
     <script>
         let digitalFormat = 24;
         let alarmTime = null;
-        let images = [
-            "https://via.placeholder.com/300?text=Website+Design",
-            "https://via.placeholder.com/300?text=Cybersecurity",
-            "https://via.placeholder.com/300?text=Software+Engineering"
-        ];
-        let imageIndex = 0;
         let darkTheme = true;
 
         function updateDigitalClock() {
@@ -101,6 +95,8 @@
             let hours = now.getHours();
             let minutes = now.getMinutes();
             let seconds = now.getSeconds();
+            minutes = minutes < 10 ? '0' + minutes : minutes;
+            seconds = seconds < 10 ? '0' + seconds : seconds;
             
             if (digitalFormat === 12) {
                 let ampm = hours >= 12 ? 'PM' : 'AM';
@@ -136,21 +132,20 @@
             if (alarmTime === currentTime) {
                 document.getElementById("alarm-sound").play();
                 alert("⏰ Alarm Ringing!");
+                alarmTime = null;
+                document.getElementById("alarm-status").innerText = "No alarm set";
             }
-        }
-
-        function changeImage() {
-            imageIndex = (imageIndex + 1) % images.length;
-            document.getElementById("clock-image").src = images[imageIndex];
         }
 
         function toggleTheme() {
             if (darkTheme) {
                 document.body.style.background = "#FFFFFF";
                 document.body.style.color = "#000000";
+                document.querySelectorAll('.clock').forEach(el => el.style.color = "#000000");
             } else {
                 document.body.style.background = "#333333";
                 document.body.style.color = "#FFD700";
+                document.querySelectorAll('.clock').forEach(el => el.style.color = "#FFD700");
             }
             darkTheme = !darkTheme;
         }
