--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <option value="UTC">UTC</option>
                 <option value="America/New_York">New York (EST)</option>
                 <option value="Europe/London">London (GMT)</option>
-                <option value="Asia/Kolkata" selected>India (IST)</option>
+                <option value="Asia/Kolkata" selected>Ashok Home(IST)</option>
             </select>
             <p id="world-time">00:00:00</p>
         </div>
